--- a/style.css/estilos.css
+++ b/style.css/estilos.css
@@ -8,6 +8,12 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.icono{
+    height: 60px;
+    width: 60px;
+    border-radius: 10px;
+}
+
 h1{
     text-align: center;
     background-color: #d0e9e9ff;
