--- a/style.css/estilos.css
+++ b/style.css/estilos.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../imagenes/colibri.jpg);
+    background-image: url(../imagenes/colibriDif.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -16,42 +16,56 @@ body {
 
 h1{
     text-align: center;
-    background-color: #d0e9e9ff;
 }
 
 #proposito {
-    background-color: rgb(150, 96, 156);
+    background-color: rgb(234, 175, 241);
     text-align: center;
     font-size: 20px;
 }
 
 .carousel-item img{
-    border-radius: 10px;
-    height: 500px;
-    width: 500px;
+    height: 600px;
+    width: 300px;
     padding: 50px;
     }
 
-
+h4{
+    background-color: #6e6d6d;
+}
+p{
+    background-color: #9d9d9d;
+}
 
 .mb-3 row{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.fechaSelect {
+.fechaSelect{
     padding: 0.375rem 0.75rem;
 }
+
 .opcion{
     width: 82px;
 }
 
-strong{
-    background-color: #d0e9e9ff;
+button{
+    margin: 10px;
+    padding:5px;
+    font-size: 15px;
+}
+
+th{
+    padding: 10px;
+}
+
+td{
+    padding: 12px;
+    margin: 5px;
 }
 
 footer{
     font-size: 10px;
     font-style: black;
-    background-color: #d0e9e9ff;
     text-align: center;
 }
