--- a/style.css/estilos.css
+++ b/style.css/estilos.css
@@ -1,3 +1,30 @@
+html{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+main {
+    margin-top: 50px;
+}
+
+
+.titulo{
+    font-size: 20px;
+    text-decoration: none;
+    text-align: center;
+    margin-top: 5px;
+    color: #0c0b0b;
+    
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+    background-color: #ececec;
+    width: 100%;
+}
+
 body {
     background-image: url(../imagenes/colibriDif.jpg);
     background-repeat: no-repeat;
@@ -5,17 +32,14 @@ body {
     background-position: center center;
     background-attachment: fixed;
     min-height: 100vh;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.icono{
-    height: 60px;
-    width: 60px;
-    border-radius: 10px;
 }
 
 h1{
     text-align: center;
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-weight: 500;
+    line-height: 1.2;
 }
 
 #proposito {
@@ -24,36 +48,81 @@ h1{
     font-size: 20px;
 }
 
+.icono{
+    height: 60px;
+    width: 60px;
+    border-radius: 10px;
+    margin-right: 30px;
+}
+
+.icono-wp{
+    margin-left: 50px;
+}
+
+.carrousel{
+    height: 400px;
+    width: 200px;
+    padding: 40px;
+}
+
 .carousel-item img{
     height: 600px;
-    width: 300px;
-    padding: 50px;
+    width: 100px;
+    padding: 80px;
     }
 
-h4{
+.carousel-control-next-icon, .carousel-control-prev-icon {
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: 100% 100%;
+    padding: 0;
+}
+
+h5{
     background-color: #6e6d6d;
 }
-p{
+.descripcion {
     background-color: #9d9d9d;
+    margin-top: 0;
+    margin-bottom: 2rem;
 }
 
-.mb-3 row{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+.card{
+    margin-left: 350px;
 }
 
-.fechaSelect{
-    padding: 0.375rem 0.75rem;
+.img-reserva{
+    height: 170px;
+    width: 80%;
+    border-radius: 10px;
+    margin-left: 50px;
+    margin-top: 15px;
+}
+
+.card-title{
+    text-align: center;
+    background-color: #cecbcb
+}
+
+.card-text{
+    text-align: center;
 }
 
 .opcion{
     width: 82px;
 }
 
-button{
-    margin: 10px;
-    padding:5px;
-    font-size: 15px;
+.row{
+    margin-left: 1rem;
 }
+
+select{
+    margin-left: 1rem;
+}
+
 
 th{
     padding: 10px;
@@ -64,8 +133,24 @@ td{
     margin: 5px;
 }
 
+button{
+    margin: 10px;
+    margin-left: 7.5rem;
+    padding:5px;
+    font-size: 15px;
+}
+
+h3{
+    text-align: center;
+}
+
+.mb-3{
+    margin-left: 1rem;
+}
+
 footer{
     font-size: 10px;
     font-style: black;
     text-align: center;
+    margin-top: 50px;
 }
