--- a/style.css/estilos.css
+++ b/style.css/estilos.css
@@ -6,6 +6,24 @@ main {
     margin-top: 50px;
 }
 
+/*navbar*/
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+    background-color: #ececec;
+    width: 100%;
+}
+
+.icono{
+    height: 60px;
+    width: 60px;
+    border-radius: 10px;
+    margin-right: 30px;
+}
+
 
 .titulo{
     font-size: 20px;
@@ -16,14 +34,6 @@ main {
     
 }
 
-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
-    background-color: #ececec;
-    width: 100%;
-}
 
 body {
     background-image: url(../imagenes/colibriDif.jpg);
@@ -48,12 +58,7 @@ h1{
     font-size: 20px;
 }
 
-.icono{
-    height: 60px;
-    width: 60px;
-    border-radius: 10px;
-    margin-right: 30px;
-}
+/*carrusels*/
 
 .carrousel{
     height: 400px;
@@ -88,6 +93,8 @@ h5{
     text-align: center;
 }
 
+/*reserva*/
+
 .card{
     margin-left: 25%;
 }
@@ -118,9 +125,9 @@ h5{
 }
 
 select{
+    margin-top: 100px;
     margin-left: 1rem;
 }
-
 
 th{
     padding: 10px;
@@ -138,6 +145,8 @@ button{
     font-size: 15px;
 }
 
+/*contacto*/
+
 h3{
     text-align: center;
 }
@@ -145,6 +154,8 @@ h3{
 .mb-3{
     margin-left: 1rem;
 }
+
+/*footer*/
 
 footer{
     font-size: 10px;
